--- a/style/main.css
+++ b/style/main.css
@@ -12,11 +12,13 @@
 
 #scoreContainer
 {
-    color: white; font-size: 4vw;    
+    color: white; font-size: 15px;    
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    position: absolute;
+    bottom: 0;
 }
